--- a/packages/vue-quill/package.json
+++ b/packages/vue-quill/package.json
@@ -42,7 +42,7 @@
   },
   "homepage": "https://vueup.github.io/vue-quill/",
   "dependencies": {
-    "quill": "^1.3.7",
+    "quill": "github:verybestjp/quill",
     "quill-delta": "^4.2.2"
   },
   "peerDependencies": {
