feat(vue-quill): Cannot find module '@verybestjp/quill' or its corresponding type declarations. エラーが出ないように

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "types": ["jest", "node"],
     "rootDir": ".",
     "paths": {
-      "@vueup/*": ["packages/*/src"]
+      "@vueup/*": ["packages/*/src"],
+      "@verybestjp/quill": ["node_modules/@types/quill"]
     }
   },
   "include": [
