Revert "feat(vue-quill): quillのバージョンアップ"
This reverts commit 557c829bdebc042725f0ec05061b30561882004c.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "rootDir": ".",
     "paths": {
       "@vueup/*": ["packages/*/src"],
-      "quill": ["node_modules/@types/quill"]
+      "@verybestjp/quill": ["node_modules/@types/quill"]
     }
   },
   "include": [
