--- a/packages/vue-quill/package.json
+++ b/packages/vue-quill/package.json
@@ -42,7 +42,7 @@
   },
   "homepage": "https://vueup.github.io/vue-quill/",
   "dependencies": {
-    "quill": "^2.0.2",
+    "@verybestjp/quill": "^2.0.6",
     "quill-delta": "^5.1.0"
   },
   "peerDependencies": {
